--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "nodejs-typescript-eslint-template",
   "version": "1.0.0",
-  "description": "Node.js TypeScript ESLint Template",
+  "description": "Robust TypeScript Template with eslint for Node.js",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "start:watch": "ts-node-dev --respawn src/index.ts",
     "clean": "rimraf dist",
     "tsc": "tsc",
     "build": "npm-run-all clean tsc",
