--- a/package.json
+++ b/package.json
@@ -17,21 +17,22 @@
   "author": "Kamesuta",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.5.8",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
-    "eslint": "^8.48.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-jsdoc": "^46.5.1",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
+    "@eslint/js": "^9.4.0",
+    "@types/node": "^20.13.0",
+    "@typescript-eslint/parser": "^8.0.0-alpha.13",
+    "eslint": "^9.4.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsdoc": "^48.2.7",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.5",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.3",
-    "rimraf": "^5.0.1",
-    "ts-node": "^10.9.1",
+    "prettier": "^3.2.5",
+    "rimraf": "^5.0.7",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^8.0.0-alpha.13"
   },
   "dependencies": {
     "log4js": "^6.9.1",
