--- a/package.json
+++ b/package.json
@@ -20,24 +20,24 @@
     "node": "22.x"
   },
   "devDependencies": {
-    "@eslint/js": "^9.4.0",
-    "@types/node": "^20.13.0",
-    "eslint": "^9.4.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jsdoc": "^48.2.7",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.5",
+    "@eslint/js": "^9.24.0",
+    "@types/node": "^22.14.1",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-jsdoc": "^50.6.9",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.5",
-    "rimraf": "^5.0.7",
+    "prettier": "^3.5.3",
+    "rimraf": "^6.0.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^8.0.0-alpha.13"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1"
   },
   "dependencies": {
     "if-env": "^1.0.4",
     "log4js": "^6.9.1",
     "toml": "^3.0.0",
-    "tsx": "^4.11.0"
+    "tsx": "^4.19.3"
   }
 }
