--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "clean": "rimraf dist",
     "tsc": "tsc",
     "build": "npm-run-all clean tsc",
-    "lint": "tsc --noEmit && eslint src test --ext .ts",
-    "lint:fix": "tsc --noEmit && eslint src test --ext .ts --fix",
+    "lint": "tsc --noEmit && eslint src --ext .ts",
+    "lint:fix": "tsc --noEmit && eslint src --ext .ts --fix",
     "prettier": "prettier --write",
     "lint-staged": "lint-staged",
     "prepare": "if-env NODE_ENV=production && echo 'Skipping husky in production' || husky"
